<resources>
    <string name="app_name">Pokefight</string>
    <string name="home">Home</string>
    <string name="pokedex">Pokedex</string>
    <string name="equipe">Team</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_user">create User</string>
    <string name="connexion">Connexion</string>
    <string name="creation_de_compte">Account creation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Surname</string>
    <string name="pseudo">Pseudo</string>
    <string name="name">Name</string>
    <string name="new_user_created">New user created</string>
    <string name="main_page">Main page</string>
    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_created">Account created</string>
    <string name="nickname">Nickname</string>
    <string name="connection_page">Connection page</string>
    <string name="shop">Shop</string>
    <string name="settings">Settings</string>
    <string name="pokemon">Pokemon</string>
    <string name="fight">FIGHT !</string>
    <string name="default_pokemon_id">#000</string>
    <string name="Offre1">500</string>
    <string name="prixOffre1">5,00</string>
    <string name="prixOffre2">10,00</string>
    <string name="offre2">1000</string>
    <string name="enter_a_code">Enter a code</string>
    <string name="purchase">Purchase</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="get_1_random_pokemon">Get 1 random pokemon</string>
    <string name="get_2_random_pokemons">Get 2 random pokemons</string>
    <string name="get_3_random_pokemons">Get 3 random pokemons</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_discovered_pokemon">DiscoveredPokemonActivity</string>
    <string name="close">X</string>
</resources>