<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_equipe"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/equipe" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_pokedex"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pokedex" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/settings" />

</menu>