<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.pokefight.ui.boutique.BoutiqueFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_boutique" />

    <fragment
        android:id="@+id/navigation_equipe"
        android:name="com.example.pokefight.ui.equipe.EquipeFragment"
        android:label="@string/equipe"
        tools:layout="@layout/fragment_equipe" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pokefight.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pokedex"
        android:name="com.example.pokefight.ui.pokedex.PokedexFragment"
        android:label="@string/pokedex"
        tools:layout="@layout/fragment_pokedex" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.pokefight.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>