<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_container"
    android:paddingStart="16dp"
    android:paddingTop="0dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <Button
        android:id="@+id/close_popup2"
        android:layout_width="32dp"
        android:layout_height="44dp"
        android:layout_marginTop="6dp"
        android:padding="0dp"
        android:text="X"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/offre1"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/pokemon_boutique"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutPokedollarOffre1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/detail_pokemon_boutique"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pokedollarOffre1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:text="@string/Offre1"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/pok_mon_dollar_sign_on_primary" />
        </LinearLayout>

        <TextView
            android:id="@+id/prixOffre1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/prixOffre1"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/offre2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/pokemon_boutique"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/offre1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/layoutPokedollarOffre2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/detail_pokemon_boutique"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pokedollarOffre2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:text="@string/offre2"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/pok_mon_dollar_sign_on_primary" />
        </LinearLayout>

        <TextView
            android:id="@+id/prixOffre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/prixOffre2"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutInputCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="80"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/InputCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryInverse"
                android:hint="@string/enter_a_code"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textColorHint="?attr/colorOnPrimaryContainer" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/valideCode"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:padding="0dp"
            android:text="✓"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="16dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>